--- a/assets/scss/components/sections/_navbar.scss
+++ b/assets/scss/components/sections/_navbar.scss
@@ -1,21 +1,20 @@
 // For Javascript scrolling
 .scroll-header {
-	position: fixed;
-	width: 100%;
 	box-shadow: 0 4px 4px rgb(0 0 0 / 10%);
-	top: 0;
-	margin: auto;
+
 	background-color: white;
-	padding-block: 20px;
-	z-index: var(--z-fixed);
-	transition: 300ms ease-out;
-	padding-block: 40px;
 }
 header {
 	height: 70px;
 	align-items: center;
 	display: flex;
 	transition: 300ms ease-out;
+	position: fixed;
+	width: 100%;
+	top: 0;
+	z-index: var(--z-fixed);
+	transition: 150ms linear;
+	padding-block: 40px;
 	.nav {
 		justify-content: space-between;
 		align-items: center;
@@ -41,7 +40,7 @@ header {
 			background-color: white;
 			box-shadow: -10px 0 10px rgba(0, 0, 0, 0.2);
 			padding: 40px 0;
-			width: 85%;
+			width: 100%;
 			height: 100vh;
 			top: 0;
 			right: -100%;
